# langgraph_boot

./: README.md  main.py  pyproject.toml
app/config/: settings.py
app/db/: setup.py
app/pydantics/: base_schema.py
app/routers/: nudge.py
app/services/: erp_extractor.py  tools.py  workflow.py
app/templates/: index.html  system_prompt.py
